--- a/conf/nginx-dev.conf
+++ b/conf/nginx-dev.conf
@@ -24,7 +24,7 @@ http {
 
     
     server {
-        listen 7888;
+        listen 7888;           #监听端口号
         set $template_root '';
 
         # 用户上传的静态文件目录
